# marslanding

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.dev  Makefile  README.md  docker-compose.db-only.yml  docker-compose.prod.yml  docker-compose.yml  env.development  env.example  env.production  env.testing  pyproject.toml
app/: __init__.py  main.py
app/api/v1/: api.py
app/api/v1/endpoints/: auth.py  health.py  users.py
app/core/: config.py  logging.py  security.py
app/db/: mongodb.py
app/models/: user.py
app/schemas/: common.py
app/services/: user_service.py
docs/: API.md  DEPLOYMENT.md
nginx/: nginx.conf
scripts/: deploy.sh  mongo-init.js  start.sh  test.sh
tests/: conftest.py
tests/integration/: test_auth.py
tests/unit/: test_health.py
